ctm-sf-homeloan-app/main/default/objects/CreditDefault__c/CreditDefault__c.object-meta.xml
<CustomObject>
    <label>Credit Default</label>
    <nameField>
        <displayFormat>CD - {000000000}</displayFormat>
        <label>Credit Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>