ctm-sf-homeloan-app/main/default/objects/CreditDefault__c/fields/DefaultAmount__c.field-meta.xml
<CustomField>
    <fullName>DefaultAmount__c</fullName>
    <label>Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>